--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   curved_navigation_bar: ^1.0.6
   lottie: ^3.2.0
   animated_splash_screen: ^1.3.0
+  provider: ^6.1.5
   
 
 dev_dependencies:
